lab-regex_in_python-Raneem

--- a/lab-regex_in_python.ipynb
+++ b/lab-regex_in_python.ipynb
@@ -32,15 +32,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid email\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
     "# Example input\n",
-    "email = \"example@example.com\"\n",
+    "email = \"aalshehriraneem@gmail.com\"\n",
     "\n",
     "# Your regex pattern here\n",
-    "pattern = r\"\"\n",
+    "pattern = r\"^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$\"\n",
+    "#{2,} → Requires at least two or more letters (e.g., .com, .edu, .io, but not .c).\n",
     "\n",
     "# Test the regex\n",
     "if re.match(pattern, email):\n",
@@ -59,9 +68,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid phone number\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
@@ -69,7 +86,7 @@
     "phone_number = \"(123) 456-7890\"\n",
     "\n",
     "# Your regex pattern here\n",
-    "pattern = r\"\"\n",
+    "pattern = r\"^\\(\\d{3}\\) \\d{3}-\\d{4}$\"\n",
     "\n",
     "# Test the regex\n",
     "if re.match(pattern, phone_number):\n",
@@ -88,18 +105,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2024-12-25']\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
     "# Example input\n",
     "text = \"The event is scheduled for 2024-12-25.\"\n",
     "\n",
-    "# Your regex pattern here\n",
-    "pattern = r\"\"\n",
-    "\n",
+    "pattern = r\"\\b(\\d{4}-\\d{2}-\\d{2})\\b\"\n",
     "# Find all matches\n",
     "dates = re.findall(pattern, text)\n",
     "print(dates)"
@@ -115,9 +138,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid URL\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
@@ -125,7 +156,9 @@
     "url = \"https://www.example.com\"\n",
     "\n",
     "# Your regex pattern here\n",
-    "pattern = r\"\"\n",
+    "pattern = r\"^https?://\"\n",
+    "#? → Makes the preceding character optional\n",
+    " \n",
     "\n",
     "# Test the regex\n",
     "if re.match(pattern, url):\n",
@@ -144,21 +177,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a']\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
     "# Example input\n",
     "text = \"A quick brown fox jumps over a lazy dog.\"\n",
     "\n",
-    "# Your regex pattern here\n",
-    "pattern = r\"\"\n",
+    "# Regex pattern to match words starting with 'a'\n",
+    "pattern = r\"\\ba\\w*\"\n",
     "\n",
     "# Find all matches\n",
-    "words = re.findall(pattern, text)\n",
-    "print(words)"
+    "matches = re.findall(pattern, text)\n",
+    "print(matches)"
    ]
   },
   {
@@ -171,9 +212,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid hex color code\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
@@ -181,7 +230,7 @@
     "color_code = \"#FFFFFF\"\n",
     "\n",
     "# Your regex pattern here\n",
-    "pattern = r\"\"\n",
+    "pattern = r\"^#[0-9A-Fa-f]{6}$\"\n",
     "\n",
     "# Test the regex\n",
     "if re.match(pattern, color_code):\n",
@@ -200,9 +249,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid password\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
@@ -210,7 +267,7 @@
     "password = \"Password123!\"\n",
     "\n",
     "# Your regex pattern here\n",
-    "pattern = r\"\"\n",
+    "pattern = r\"^(?=.*[A-Z])(?=.*[a-z])(?=.*\\d)(?=.*[\\W_]).{8,}$\"\n",
     "\n",
     "# Test the regex\n",
     "if re.match(pattern, password):\n",
@@ -229,9 +286,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is an example.\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
@@ -239,10 +304,11 @@
     "text = \"This   is   an   example.\"\n",
     "\n",
     "# Your regex pattern here\n",
-    "pattern = r\"\"\n",
+    "pattern = r\"\\s+\"\n",
+    "# \\s → Matches any whitespace character\n",
     "\n",
     "# Replace extra spaces\n",
-    "cleaned_text = re.sub(pattern, \"\", text)\n",
+    "cleaned_text = re.sub(pattern, \" \", text)\n",
     "print(cleaned_text)"
    ]
   },
@@ -256,9 +322,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid IP address\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
@@ -266,7 +340,7 @@
     "ip_address = \"192.168.1.1\"\n",
     "\n",
     "# Your regex pattern here\n",
-    "pattern = r\"\"\n",
+    "pattern = r\"^(\\d{1,3}\\.){3}\\d{1,3}$\"\n",
     "\n",
     "# Test the regex\n",
     "if re.match(pattern, ip_address):\n",
@@ -285,9 +359,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['#Python', '#Regex', '#Coding']\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
@@ -295,7 +377,7 @@
     "text = \"Here are some hashtags: #Python #Regex #Coding.\"\n",
     "\n",
     "# Your regex pattern here\n",
-    "pattern = r\"\"\n",
+    "pattern = r\"#\\w+\"\n",
     "\n",
     "# Find all matches\n",
     "hashtags = re.findall(pattern, text)\n",
@@ -320,9 +402,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2', '3']\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
@@ -330,7 +420,7 @@
     "text = \"There are 2 apples and 3 oranges.\"\n",
     "\n",
     "# Your regex pattern here\n",
-    "pattern = r\"\"\n",
+    "pattern = r\"\\d+\"\n",
     "\n",
     "# Find all matches\n",
     "digits = re.findall(pattern, text)\n",
@@ -347,9 +437,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid credit card number\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
@@ -357,7 +455,7 @@
     "credit_card_number = \"1234-5678-9876-5432\"\n",
     "\n",
     "# Your regex pattern here\n",
-    "pattern = r\"\"\n",
+    "pattern = r\"^\\d{4}-\\d{4}-\\d{4}-\\d{4}$\"\n",
     "\n",
     "# Test the regex\n",
     "if re.match(pattern, credit_card_number):\n",
@@ -378,7 +476,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['!', '?', '@', '.']\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
@@ -386,7 +492,9 @@
     "text = \"Hello! How are you? @Python3.\"\n",
     "\n",
     "# Your regex pattern here\n",
-    "pattern = r\"\"\n",
+    "pattern = r\"[^\\w\\s]\"\n",
+    "# \\w → Matches any alphanumeric character \n",
+    "# \\s → Matches any whitespace character\n",
     "\n",
     "# Find all matches\n",
     "non_alphanumeric_chars = re.findall(pattern, text)\n",
@@ -403,9 +511,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid date format\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
@@ -413,7 +529,7 @@
     "date_string = \"25/12/2024\"\n",
     "\n",
     "# Your regex pattern here\n",
-    "pattern = r\"\"\n",
+    "pattern = r\"\\d{2}/\\d{2}/\\d{4}\"\n",
     "\n",
     "# Test the regex\n",
     "if re.match(pattern, date_string):\n",
@@ -434,7 +550,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(4, 16), match='@example.com'>\n",
+      "<re.Match object; span=(5, 16), match='@domain.org'>\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
@@ -442,7 +567,7 @@
     "email_list = [\"user@example.com\", \"admin@domain.org\"]\n",
     "\n",
     "# Your regex pattern here\n",
-    "pattern = r\"\"\n",
+    "pattern = r\"@(\\w+\\.\\w+)\"\n",
     "\n",
     "for email in email_list:\n",
     "    domain = re.search(pattern, email)\n",
@@ -466,7 +591,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -480,7 +605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
